Fixed overflow y

--- a/src/components/carroussel/index.module.scss
+++ b/src/components/carroussel/index.module.scss
@@ -13,6 +13,7 @@
 .content {
     display: flex;
     overflow-x: hidden;
+    overflow-y: hidden;
     scroll-behavior: smooth;
     width: 60%;
     height: 400px;
